# details-app

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  TASKS.md  build.sh  details.py  docker-compose.yml  gunicorn_conf.py  pyproject.toml
K8s/: TASKS.md  deployment.yml  service.yaml
src/details/: __init__.py  app.py
src/details/libs/: __init__.py  libs.py
src/details/templates/: index.html  layout.html
