[tool.poetry]
name = "details-app"
version = "0.1.0"
description = ""
authors = ["Silent Mobius <alex@vaiolabs.com>"]
readme = "README.md"


[tool.poetry.dependencies]
pyinstaller = "^5.3"
python = "^3.11"
sqlalchemy = "^2.0.30"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
