[tool.poetry]
name = "details-app"
version = "0.1.0"
description = ""
authors = ["Silent Mobius <alex@vaiolabs.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sqlalchemy = "^2.0.30"
gunicorn = "^22.0.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask = "^3.0.3"
pyinstaller = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
